# Zephyr-Robot

./: .gitignore  CMakeLists.txt  Documentation.html  README.md  app.overlay  prj.conf
DUT/: CMakeLists.txt  app.overlay  prj.conf
DUT/src/: main.c
include/: adc_thread.h  cmd_parser.h  dio_thread.h  pwm_thread.h  spi_thread.h  uart_passthru_thread.h
robot/: log.html  output.xml  report.html  requirements.txt  test_adc.robot  test_all.robot  test_dio.robot  test_pwm.robot  test_spi.robot  test_uart.robot  testbench_lib.py
robot/results/: log.html  output.xml  report.html
robot/robot_env/: pyvenv.cfg
src/: adc_thread.c  cmd_parser.c  dio_thread.c  main.c  pwm_thread.c  spi_thread.c  uart_passthru_thread.c
